# parafrase-system

./: .env  .gitignore  API_DESIGN_ANALYSIS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CORE_CHAPTERS_GUIDE.md  DDGS_ENHANCED_README.md  README.md  README_LARGE_FILE_SUPPORT.md  batch_word_paraphraser.py  cleanup_system.py  combined_analysis_20250807_225618.json  combined_analysis_20250808_104121.json  contoh.json  ddgs.md  demo_core_chapters.py  document_processor.py  enhanced_turnitin_gemini.py  enhanced_turnitin_report_20250804_215714.json  enhanced_turnitin_report_20250804_220039.json  full_gemini_paraphraser.py  integrated_smart_paraphrase_system.py  lolos_turnitin.py  main.py  main_paraphrase_system.py  plagiarism_detector.py  report_BAB I - 2025-08-05T085341.331_invisible_20250808_180950_paraphrased_20250808_111417.json  report_BAB III - 2025-08-05T085343.369_invisible_20250808_181021_paraphrased_20250808_111029.json  report_SKRIPSI  FAHRISAL FADLI-2_paraphrased_20250813_220742.json  report_SKRIPSI  FAHRISAL FADLI-2_paraphrased_20250813_221335.json  report_efficient_BAB I - 2025-08-05T085341.331_invisible_20250808_180950_efficient_20250808_114519.json  report_efficient_BAB I - 2025-08-05T085341.331_invisible_20250808_180950_efficient_20250808_115742.json  report_efficient_BAB I - 2025-08-05T085341.331_invisible_20250808_180950_efficient_20250809_033556.json  report_efficient_BAB II - 2025-08-05T085342.216_invisible_20250808_181013_efficient_20250808_114539.json  report_efficient_BAB II - 2025-08-05T085342.216_invisible_20250808_181013_efficient_20250808_115801.json  report_efficient_BAB II - 2025-08-05T085342.216_invisible_20250808_181013_efficient_20250809_033738.json  report_efficient_BAB III - 2025-08-05T085343.369_invisible_20250808_181021_efficient_20250808_114514.json  report_efficient_BAB III - 2025-08-05T085343.369_invisible_20250808_181021_efficient_20250808_115737.json  report_efficient_BAB III - 2025-08-05T085343.369_invisible_20250808_181021_efficient_20250809_033536.json  smart_efficient_paraphraser.py  smart_hybrid_paraphraser.py  (+6 more)
archive/: anti_plagiat.py  balanced_hybrid_paraphraser.py  enhanced_paraphrase_system.py  integrated_plagiarism_processor.py  paraphrase_system.py  parsing.py  smart_turnitin_detector.py
completed/: BAB I - 2025-08-05T085341.331_invisible_20250808_180950_efficient.docx  BAB I - 2025-08-05T085341.331_invisible_20250808_180950_paraphrased.docx  BAB II - 2025-08-05T085342.216_invisible_20250808_181013_efficient.docx  BAB II - 2025-08-05T085342.216_invisible_20250808_181013_paraphrased_20250808_104121.docx  BAB III - 2025-08-05T085343.369_invisible_20250808_181021_efficient.docx  BAB III - 2025-08-05T085343.369_invisible_20250808_181021_paraphrased.docx  batch_summary_20250813_221335.json  sample_test_document_ORIGINAL_20250807_214215.docx  (+1 more)
components/: smart_plagiarism_checker.py
paraphrase_backend/: .env.example  PARAPHRASER_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  test_api.py
paraphrase_backend/app/: __init__.py  main.py
paraphrase_backend/app/api/: router.py
paraphrase_backend/app/api/endpoints/: batch_word.py  full_gemini.py  health.py  integrated_smart.py  paraphrase.py  systems.py  ultimate_hybrid.py
paraphrase_backend/app/core/: __init__.py  config.py  exceptions.py
paraphrase_backend/app/services/: __init__.py  batch_word_service.py  full_gemini_service.py  integrated_smart_service.py  paraphrase_service.py  ultimate_hybrid_service.py
paraphrase_backend/requirements/: base.txt  dev.txt  prod.txt
paraphrase_backend/scripts/: start.sh
(+18 files in other folders)
